# routes/swagger.js
@@ -3,6 +3,9 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger-output.json');
 
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.get('/api-docs', (req, res, next) => {
+    // #swagger.ignore = true
+    swaggerUi.setup(swaggerDocument)(req, res, next);
+});
 
 module.exports = router;
